apps/prometheus/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v3.11.3-distroless
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
          args:
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --storage.tsdb.retention.time=7d
            - --auto-gomemlimit
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
              subPath: prometheus
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: data-pvc
